SLVS-2405 Enable VB.NET language