@@ -20,9 +20,9 @@
 package org.sonarsource.sonarlint.visualstudio.roslyn.http;
 
 import com.google.gson.JsonParser;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,6 +30,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.sonar.api.batch.rule.ActiveRule;
 import org.sonar.api.rule.RuleKey;
+import org.sonarsource.sonarlint.visualstudio.roslyn.CSharpLanguage;
+import org.sonarsource.sonarlint.visualstudio.roslyn.VbNetLanguage;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -47,8 +49,8 @@ class JsonRequestBuilderTests {
 
   @Test
   void buildBody_withEmptyCollections_shouldReturnValidJson() {
-    Collection<String> fileNames = Collections.emptyList();
-    Collection<ActiveRule> activeRules = Collections.emptyList();
+    var fileNames = new ArrayList<String>();
+    var activeRules = new ArrayList<ActiveRule>();
     var expected = "{\"FileNames\":[],\"ActiveRules\":[]}";
 
     var result = jsonParser.buildBody(fileNames, activeRules);
@@ -58,9 +60,10 @@ class JsonRequestBuilderTests {
 
   @Test
   void buildBody_withFileNamesAndActiveRules_shouldReturnValidJson() {
-    Collection<String> fileNames = List.of("File1.cs", "File2.cs");
-    Collection<ActiveRule> activeRules = List.of(createMockActiveRule("S100", new HashMap<>()), createMockActiveRule("S101", new HashMap<>()));
-    var expected = "{\"FileNames\":[\"File1.cs\",\"File2.cs\"],\"ActiveRules\":[{\"RuleKey\":\"S100\",\"Params\":{}},{\"RuleKey\":\"S101\",\"Params\":{}}]}";
+    var fileNames = List.of("File1.cs", "File2.vb");
+    var activeRules = List.of(createMockActiveRule("S100", CSharpLanguage.REPOSITORY_KEY, new HashMap<>()),
+      createMockActiveRule("S101", VbNetLanguage.REPOSITORY_KEY, new HashMap<>()));
+    var expected = "{\"FileNames\":[\"File1.cs\",\"File2.vb\"],\"ActiveRules\":[{\"RuleId\":\"csharpsquid:S100\",\"Parameters\":{}},{\"RuleId\":\"vbnet:S101\",\"Parameters\":{}}]}";
 
     var result = jsonParser.buildBody(fileNames, activeRules);
 
@@ -68,14 +71,26 @@ class JsonRequestBuilderTests {
   }
 
   @Test
+  void buildBody_withActiveRules_shouldReturnRuleId() {
+    var fileNames = new ArrayList<String>();
+    var activeRule = createMockActiveRule("S100", CSharpLanguage.REPOSITORY_KEY, new HashMap<>());
+    var expected = "{\"FileNames\":[],\"ActiveRules\":[{\"RuleId\":\"csharpsquid:S100\",\"Parameters\":{}}]}";
+
+    var result = jsonParser.buildBody(fileNames, List.of(activeRule));
+
+    assertThat(result).isEqualTo(expected);
+  }
+
+  @Test
   void buildBody_withActiveRulesWithParams_shouldIncludeParams() {
-    Collection<String> fileNames = Collections.emptyList();
-    Map<String, String> params = new HashMap<>();
+    var fileNames = new ArrayList<String>();
+    var params = new HashMap<String, String>();
     params.put("maximum", "10");
     params.put("isRegularExpression", "true");
-    ActiveRule ruleWithParams = createMockActiveRule("S1003", params);
-    Collection<ActiveRule> activeRules = Collections.singletonList(ruleWithParams);
-    var expected = "{\"FileNames\":[],\"ActiveRules\":[{\"RuleKey\":\"S1003\",\"Params\":{\"maximum\":\"10\",\"isRegularExpression\":\"true\"}}]}";
+    var csharpRuleWithParams = createMockActiveRule("S1003", CSharpLanguage.REPOSITORY_KEY, params);
+    var vbnetRuleWithParams = createMockActiveRule("S1066", VbNetLanguage.REPOSITORY_KEY, params);
+    var activeRules = List.of(csharpRuleWithParams, vbnetRuleWithParams);
+    var expected = "{\"FileNames\":[],\"ActiveRules\":[{\"RuleId\":\"csharpsquid:S1003\",\"Parameters\":{\"maximum\":\"10\",\"isRegularExpression\":\"true\"}},{\"RuleId\":\"vbnet:S1066\",\"Parameters\":{\"maximum\":\"10\",\"isRegularExpression\":\"true\"}}]}";
 
     var result = jsonParser.buildBody(fileNames, activeRules);
 
@@ -92,11 +107,11 @@ class JsonRequestBuilderTests {
 
   @Test
   void buildBody_withSpecialCharactersInFileNames_shouldEscapeProperly() {
-    Collection<String> fileNames = Arrays.asList(
+    var fileNames = Arrays.asList(
       "file with spaces.cs",
       "file\"with\"quotes.cs",
       "file\\with\\backslashes.cs");
-    Collection<ActiveRule> activeRules = Collections.emptyList();
+    var activeRules = new ArrayList<ActiveRule>();
     var expected = "{\"FileNames\":[\"file with spaces.cs\",\"file\\\"with\\\"quotes.cs\",\"file\\\\with\\\\backslashes.cs\"],\"ActiveRules\":[]}";
 
     var result = jsonParser.buildBody(fileNames, activeRules);
@@ -109,12 +124,13 @@ class JsonRequestBuilderTests {
     assertThat(fileNamesArray.get(2).getAsString()).hasToString("file\\with\\backslashes.cs");
   }
 
-  private ActiveRule createMockActiveRule(String ruleId, Map<String, String> params) {
+  private ActiveRule createMockActiveRule(String ruleKey, String repositoryKey, Map<String, String> params) {
     ActiveRule activeRule = mock(ActiveRule.class);
-    RuleKey ruleKey = mock(RuleKey.class);
+    RuleKey rule = mock(RuleKey.class);
 
-    when(ruleKey.rule()).thenReturn(ruleId);
-    when(activeRule.ruleKey()).thenReturn(ruleKey);
+    when(rule.toString()).thenReturn(repositoryKey + ":" + ruleKey);
+    when(rule.rule()).thenReturn(ruleKey);
+    when(activeRule.ruleKey()).thenReturn(rule);
     when(activeRule.params()).thenReturn(params);
 
     return activeRule;
